--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 django==4.1.4
 djongo==1.3.6  
+pytz==2022.7.1
 pymongo==4.3.3
 requests==2.28.1
 beautifulsoup4==4.11.1
@@ -7,3 +8,4 @@ gunicorn==20.1.0
 python-dotenv==0.19.2
 dnspython==2.3.0
 whitenoise==6.6.0
+
