--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SECRET_KEY='django-insecure--4z!6fv**hz67e2x5v!)kb#^6@vurc150bnki8lga(@t_0hmd3'
+SECRET_KEY='hidden'
 DEBUG=False
 ALLOWED_HOSTS=pyjobscrap.onrender.com,localhost,127.0.0.1
-MONGODB_URI='mongodb+srv://abhay:bmwm30i@cluster0.fceee.mongodb.net/job_database?retryWrites=true&w=majority&appName=Cluster0'
-SCRAPER_API_KEY='70fa9b5ea300ee044d538daf4ed16ade'
+MONGODB_URI='hidden'
+SCRAPER_API_KEY='hidden'
